--- a/README
+++ b/README
@@ -56,6 +56,7 @@ Working right now:
 + full-scene visual effects
   - vignette
   - motion ghosting
+  - glow/bloom
 
 Planned features:
 - pose-sequence animations supported in engine and "thingmaker"
